syntax = "proto3";

package order;

option go_package = "build/order";

import "protos/global/global.proto";

// FreightTemplatesRegion 区域运费
message FreightTemplatesRegion {
  // 区域运费id
  string regionId = 1;  // @gotags: `gorm:"primary_key;<-:create"`
  // 模板id
  string tempId = 2;  // @gotags: `gorm:"<-" validate:"required"`
  // 计费方式
  int64 billingMethods = 3;  // @gotags: `gorm:"<-" validate:"required"`
  // 地区编码(包含省和市)
  string areaCode = 4;  // @gotags: `gorm:"<-" validate:"required"`
  // 首件
  int64 first = 5;  // @gotags: `gorm:"<-" validate:"required"`
  // 首件运费
  double firstPrice = 6;  // @gotags: `gorm:"<-" validate:"required"`
  // 续件
  int64 continued = 7;  // @gotags: `gorm:"<-" validate:"required"`
  // 续件价格
  double continuedPrice = 8;  // @gotags: `gorm:"<-" validate:"required"`
  // 删除状态
  bool delStatus = 9;  // @gotags: `gorm:"-" swaggerignore:"true" minimum:"0" maximum:"1" default:"0"`
  // 创建人
  string createBy = 10;  // @gotags: `gorm:"->;<-:create" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 修改人
  string updateBy = 11;  // @gotags: `gorm:"->;<-:update" swaggerignore:"true" minLength:"6" maxLength:"19"`
  // 创建时间
  string createTime = 12;  // @gotags: `gorm:"->" swaggerignore:"true"`
  // 修改时间
  string updateTime = 13;  // @gotags: `gorm:"->" swaggerignore:"true"`
}

message FreightTemplatesRegionIds {
  repeated string regionId = 1;
  string userId = 2;
}

message FreightTemplatesRegionPageAuthQuery {
  // 分页索引
  int64 pageIndex = 1;  //  @gotags: `validate:"required,min=1" example:"1"`
  // 分页长度
  int64 pageSize = 2;  //  @gotags: `validate:"required,min=10,max=100" example:"10"`
  // 查询调教
  message QueryParams {
    string name = 1;
  }
  // 查询参数
  QueryParams params = 3;
  // 用户登录授权信息
  global.Auth auth = 4;  // @gotags: swaggerignore:"true"`
}

message FreightTemplatesRegionResponse {
  int64 count = 1;  // 数据量
  string Msg = 2;  // 错误信息
  FreightTemplatesRegion detail = 3;  // 详情
  repeated FreightTemplatesRegion list = 4;  // 列表
}

service FreightTemplatesRegionService {
  // Create 区域运费新增信息
  rpc Create(FreightTemplatesRegion) returns (FreightTemplatesRegionResponse);

  // Update 更新区域运费信息
  rpc Update(FreightTemplatesRegion) returns (FreightTemplatesRegionResponse);

  // Delete 删除区域运费信息
  rpc Delete(FreightTemplatesRegionIds) returns (FreightTemplatesRegionResponse);

  // FindPageList 查询区域运费列表
  rpc FindPageList(FreightTemplatesRegionPageAuthQuery) returns (FreightTemplatesRegionResponse);

  // FindById 查询区域运费详情
  rpc FindById(FreightTemplatesRegionIds) returns (FreightTemplatesRegionResponse);
}